--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "start": "ng serve",
         "build": "ng build",
         "test": "ng test",
+        "s": "ng-openapi-gen --input src/swagger/swagger.json --output src/app/api",
         "lint": "ng lint"
     },
     "private": true,
@@ -20,12 +21,14 @@
         "@angular/platform-browser": "~14.0.0",
         "@angular/platform-browser-dynamic": "~14.0.0",
         "@angular/router": "~14.0.0",
+        "@auth0/angular-jwt": "^5.1.2",
         "@fullcalendar/angular": "^5.8.0",
         "@fullcalendar/core": "^5.8.0",
         "@fullcalendar/daygrid": "^5.8.0",
         "@fullcalendar/interaction": "^5.8.0",
         "@fullcalendar/timegrid": "^5.8.0",
         "chart.js": "^3.3.2",
+        "ng-openapi-gen": "^0.23.0",
         "primeflex": "^3.2.0",
         "primeicons": "5.0.0",
         "primeng": "14.0.0",
